crates/config/tests/snapshots/block_string_1_literal_strip_none_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-strip-none-wsln-eof

## Input

```mical
key |-
  hello

```

## JSON

```json
{
  "key": "hello"
}
```

vim:ft=markdown
