crates/config/tests/snapshots/block_string_body_trailing_whitespace.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-body-trailing-whitespace

## Input

```mical
key |
  hello   
  world  

```

## JSON

```json
{
  "key": "hello   \nworld  \n"
}
```

vim:ft=markdown
