crates/config/tests/snapshots/block_string_chomp_empty.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-chomp-empty

## Input

```mical
a |

b |-

c |+

d >

e >-

f >+


```

## JSON

```json
{
  "a": "",
  "b": "",
  "c": "",
  "d": "",
  "e": "",
  "f": ""
}
```

vim:ft=markdown
