crates/config/tests/snapshots/block_string_chomp_keep.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-chomp-keep

## Input

```mical
key |+
  line 1
  line 2

```

## JSON

```json
{
  "key": "line 1\nline 2\n"
}
```

vim:ft=markdown
