crates/config/tests/snapshots/block_string_chomp_keep_trailing.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-chomp-keep-trailing

## Input

```mical
key |+
  line


foo bar

```

## JSON

```json
{
  "key": "line\n\n\n",
  "foo": "bar"
}
```

vim:ft=markdown
