crates/config/tests/snapshots/block_string_chomp_strip.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-chomp-strip

## Input

```mical
key |-
  line 1
  line 2

```

## JSON

```json
{
  "key": "line 1\nline 2"
}
```

vim:ft=markdown
