crates/config/tests/snapshots/block_string_clip_multi_trailing.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-clip-multi-trailing

## Input

```mical
key |
  hello


other val

```

## JSON

```json
{
  "key": "hello\n",
  "other": "val"
}
```

vim:ft=markdown
