crates/config/tests/snapshots/block_string_clip_trailing.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-clip-trailing

## Input

```mical
key |
  hello
  world

a 1

```

## JSON

```json
{
  "a": 1,
  "key": "hello\nworld\n"
}
```

vim:ft=markdown
