crates/config/tests/snapshots/block_string_consecutive.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-consecutive

## Input

```mical
a |
  first
b |
  second
c >
  folded

```

## JSON

```json
{
  "a": "first\n",
  "b": "second\n",
  "c": "folded\n"
}
```

vim:ft=markdown
